Add CRUD service layer for core entities
Implements create/read/update/delete for clients, locations, shoots,
gear items, media and invoices on top of Spring Data JPA repositories.

- request/response DTOs with MapStruct mappers
- domain exceptions (not found / duplicate / bad request) + @ControllerAdvice handler
- read-only user lookups for owner selection and basic stats aggregation
- fix user id type to Long and resolve owner references in shoot/gear